# AI-Agents-with-LangChain-and-LangGraph

./: README.md  app.py  pyproject.toml
ice-breaker-app/: ice_breaker.py  output_parsers.py
ice-breaker-app/agents/: linkedin_lookup_agent.py  twitter_lookup_agent.py
ice-breaker-app/templates/: index.html
ice-breaker-app/third_parties/: linkedin.py
ice-breaker-app/tools/: tools.py
intro-to-vector-dbs/: ingestion.py  main.py  memory.py
intro-to-vector-dbs/faiss_index_usenix/: index.faiss  index.pkl
react-langchain/: callbacks.py  main.py
third_parties/: twitter.py
